# aoc-24

./: Makefile  README.md  pyproject.toml
misc/: readme-intro.md
src/aoc/solutions/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py
src/aoc/utilities/: decorators.py  fetch.py
