[project]
name = "aoc-24"
version = "0.1.0"
description = "Advent of Code Python solutions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools", "wheel", "pip"]
build-backend = "setuptools.build_meta"
